[gd_scene load_steps=9 format=3 uid="uid://b86spviqend3g"]

[ext_resource type="Script" path="res://scripts/menus/mousehandling/detecttext.gd" id="2"]
[ext_resource type="Script" path="res://scripts/menus/mousehandling/detect_uiclick.gd" id="3"]
[ext_resource type="Theme" uid="uid://bir7klqliay2t" path="res://themes/main_theme.tres" id="3_vwt5d"]
[ext_resource type="Theme" uid="uid://xjwshynbp6sr" path="res://themes/button_theme.tres" id="5_4f8sw"]
[ext_resource type="Texture2D" uid="uid://c0gamwdgc6vg1" path="res://fonts/fontawesome-free-6.4.0-desktop/svgs/solid/ticket.svg" id="5_8rgo8"]
[ext_resource type="Texture2D" uid="uid://xi07at00qdyj" path="res://fonts/fontawesome-free-6.4.0-desktop/svgs/solid/a.svg" id="6_owyr8"]
[ext_resource type="Texture2D" uid="uid://bbq0s7i5wiuol" path="res://fonts/fontawesome-free-6.4.0-desktop/svgs/solid/warehouse.svg" id="6_p074g"]
[ext_resource type="Theme" uid="uid://ccql3hfhmn2kw" path="res://themes/window_theme.tres" id="7_221ny"]

[node name="MainGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3")

[node name="RPDialog" type="Window" parent="."]
title = "RP Box"
initial_position = 1
size = Vector2i(500, 500)
visible = false
popup_window = true
theme = ExtResource("7_221ny")

[node name="ColorRect" type="ColorRect" parent="RPDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.152941, 0.152941, 1)

[node name="MarginContainer" type="MarginContainer" parent="RPDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="RPBox" type="Panel" parent="RPDialog/MarginContainer"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="RPDialog/MarginContainer/RPBox"]
layout_mode = 0
anchor_left = 0.0226537
anchor_top = 0.0178117
anchor_right = 0.977346
anchor_bottom = 0.918575
caret_blink = true
script = ExtResource("2")

[node name="ButtonContainer" type="GridContainer" parent="RPDialog/MarginContainer/RPBox"]
layout_mode = 0
anchor_left = 0.0226537
anchor_top = 0.928753
anchor_right = 0.983819
anchor_bottom = 0.984733
columns = 5

[node name="SubmitButton" type="Button" parent="RPDialog/MarginContainer/RPBox/ButtonContainer"]
layout_mode = 2
text = "Submit"

[node name="MarkupButton" type="Button" parent="RPDialog/MarginContainer/RPBox/ButtonContainer"]
layout_mode = 2
text = "Markup"

[node name="MarkupDialog" type="Window" parent="RPDialog"]
title = "Markup Guide"
initial_position = 1
size = Vector2i(200, 200)
visible = false

[node name="ColorRect" type="ColorRect" parent="RPDialog/MarkupDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.152941, 0.152941, 1)

[node name="MarkupLabel" type="RichTextLabel" parent="RPDialog/MarkupDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[table=2]
[cell]Effect[/cell][cell]Tag[/cell]
[cell][b]Bold[/b][/cell][cell]+++[/cell]
[cell][i]Italics[/i][/cell][cell]|||[/cell]
[cell][u]Underline[/u][/cell][cell]___[/cell]
[cell][s]Strikethrough[/s][/cell][cell]~~~[/cell]
[cell]Center[/cell][cell]===[/cell]
[cell]Right[/cell][cell]^^^[/cell]
[/table]"
fit_content = true

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.666
anchor_top = 0.006
anchor_right = 0.666
anchor_bottom = 0.006
offset_left = -55.232
offset_top = 0.112
offset_right = -1.23199
offset_bottom = 638.112
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_4f8sw")
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 6

[node name="TicketsButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Tickets"
theme = ExtResource("5_4f8sw")
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
icon = ExtResource("5_8rgo8")
expand_icon = true

[node name="InventoryButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Tickets"
theme = ExtResource("5_4f8sw")
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
icon = ExtResource("6_p074g")
expand_icon = true

[node name="AdminPanelButton" type="Button" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("5_4f8sw")
icon = ExtResource("6_owyr8")
icon_alignment = 1
expand_icon = true

[node name="ChatboxContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.667969
anchor_top = -0.00333333
anchor_right = 1.00098
anchor_bottom = 1.00167
offset_left = 0.499756
offset_top = 5.16
offset_right = -4.12903
offset_bottom = -4.08215

[node name="Chatbox" type="Panel" parent="ChatboxContainer"]
layout_mode = 2
theme = ExtResource("3_vwt5d")

[node name="ChatSelect" type="Panel" parent="ChatboxContainer/Chatbox"]
layout_mode = 0
anchor_left = 0.0211478
anchor_top = 0.0135823
anchor_right = 0.978843
anchor_bottom = 0.113752

[node name="ChatSelectTabs" type="TabContainer" parent="ChatboxContainer/Chatbox/ChatSelect"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
tab_alignment = 1

[node name="IC" type="Label" parent="ChatboxContainer/Chatbox/ChatSelect/ChatSelectTabs"]
layout_mode = 2
text = "IC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LOOC" type="Label" parent="ChatboxContainer/Chatbox/ChatSelect/ChatSelectTabs"]
visible = false
layout_mode = 2
text = "LOOC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OOC" type="Label" parent="ChatboxContainer/Chatbox/ChatSelect/ChatSelectTabs"]
visible = false
layout_mode = 2
text = "OOC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ETC" type="Label" parent="ChatboxContainer/Chatbox/ChatSelect/ChatSelectTabs"]
visible = false
layout_mode = 2
text = "ETC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ALL" type="Label" parent="ChatboxContainer/Chatbox/ChatSelect/ChatSelectTabs"]
visible = false
layout_mode = 2
text = "ETC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChatInput" type="Panel" parent="ChatboxContainer/Chatbox"]
layout_mode = 0
anchor_left = 0.019697
anchor_top = 0.921233
anchor_right = 0.983333
anchor_bottom = 0.989726

[node name="RP" type="Button" parent="ChatboxContainer/Chatbox/ChatInput"]
layout_mode = 0
anchor_left = 0.845912
anchor_top = 0.05
anchor_right = 0.993711
anchor_bottom = 0.95
text = "RP"

[node name="OneLineChat" type="LineEdit" parent="ChatboxContainer/Chatbox/ChatInput"]
layout_mode = 0
anchor_left = 0.00628931
anchor_top = 0.05
anchor_right = 0.842767
anchor_bottom = 0.95
script = ExtResource("2")

[node name="ScrollContainer" type="ScrollContainer" parent="ChatboxContainer/Chatbox"]
layout_mode = 0
anchor_left = 0.024169
anchor_top = 0.117147
anchor_right = 0.957695
anchor_bottom = 0.920201

[node name="ChatOutputContainer" type="VBoxContainer" parent="ChatboxContainer/Chatbox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2

[connection signal="close_requested" from="RPDialog" to="." method="_on_rp_dialog_close_requested"]
[connection signal="mouse_exited" from="RPDialog/MarginContainer/RPBox/TextEdit" to="." method="_on_TextEdit_mouse_exited"]
[connection signal="pressed" from="RPDialog/MarginContainer/RPBox/ButtonContainer/SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="pressed" from="RPDialog/MarginContainer/RPBox/ButtonContainer/MarkupButton" to="." method="_on_MarkupButton_pressed"]
[connection signal="close_requested" from="RPDialog/MarkupDialog" to="." method="_on_markup_dialog_close_requested"]
[connection signal="pressed" from="GridContainer/TicketsButton" to="." method="_on_TicketsButton_pressed"]
[connection signal="pressed" from="GridContainer/InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="GridContainer/AdminPanelButton" to="." method="_on_AdminPanelButton_pressed"]
[connection signal="tab_changed" from="ChatboxContainer/Chatbox/ChatSelect/ChatSelectTabs" to="." method="_on_ChatSelectTabs_tab_changed"]
[connection signal="pressed" from="ChatboxContainer/Chatbox/ChatInput/RP" to="." method="_on_RP_pressed"]
[connection signal="mouse_exited" from="ChatboxContainer/Chatbox/ChatInput/OneLineChat" to="." method="_on_OneLineChat_mouse_exited"]
